<resources>
    <string name="app_name">ToDo List</string>
    <string name="add">Add</string>
    <string name="low_importance">Low importance</string>
    <string name="normal_importance">Normal importance</string>
    <string name="high_importance">High importance</string>
    <string name="add_a_task">Add a task</string>
    <string name="select_deadline_date">Select deadline date</string>
    <string name="task">Task</string>
    <string name="task_text">Task text</string>
    <string name="deadline_date">Deadline date</string>
    <string name="select_date">Select date</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_offline">Continue Offline</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="successfully_registration">Successfully registration. You can login now.</string>
</resources>