<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/todoListFragment">

    <fragment
        android:id="@+id/todoListFragment"
        android:name="com.coriolang.todolist.ui.view.TodoListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_todo_list">
        <action
            android:id="@+id/action_todoListFragment_to_todoEditFragment"
            app:destination="@id/todoEditFragment" />
        <action
            android:id="@+id/action_todoListFragment_to_todoLoginFragment"
            app:destination="@id/todoLoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/todoEditFragment"
        android:name="com.coriolang.todolist.ui.view.TodoEditFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_todo_edit">
        <action
            android:id="@+id/action_todoEditFragment_to_todoListFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/todoListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="id"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/todoLoginFragment"
        android:name="com.coriolang.todolist.ui.view.TodoLoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_todo_login" >
        <action
            android:id="@+id/action_todoLoginFragment_to_todoListFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/todoListFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>